--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
 
   <app-tasks
     *ngIf="hasName; else fallback"
-    [id]="selectedUserId"
-    [name]="selectedUserName"
+    [userId]="selectedUserId"
+    [userName]="selectedUserName"
   />
   <ng-template #fallback>
     <h2>Please select a user to see their tasks.</h2>
