--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -8,7 +8,7 @@
 
   <ul>
     <li *ngFor="let task of userTasks; trackBy: trackTask">
-      <app-task [task]="task"></app-task>
+      <app-task [task]="task" (complete)="onCompleteTask($event)"></app-task>
     </li>
   </ul>
 </section>
