--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,14 @@
+<app-new-task
+  *ngIf="isAddingTask"
+  (cancelNewTask)="onCancelAddTask()"
+  (createNewTask)="onCreateNewTask($event)"
+></app-new-task>
+
 <section id="tasks">
   <header>
     <h2>{{ userName }}'s Tasks</h2>
     <menu>
-      <button>Add Task</button>
+      <button (click)="onAddNewTask()">Add Task</button>
     </menu>
   </header>
 
