--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,20 +1,22 @@
 <app-new-task
   *ngIf="isAddingTask"
-  (cancelNewTask)="onCancelAddTask()"
-  (createNewTask)="onCreateNewTask($event)"
+  [userId]="userId"
+  (close)="onCloseAddTask()"
 ></app-new-task>
 
-<section id="tasks">
-  <header>
-    <h2>{{ userName }}'s Tasks</h2>
-    <menu>
-      <button (click)="onAddNewTask()">Add Task</button>
-    </menu>
-  </header>
+<app-card>
+  <section id="tasks">
+    <header>
+      <h2>{{ userName }}'s Tasks</h2>
+      <menu>
+        <button (click)="onAddNewTask()">Add Task</button>
+      </menu>
+    </header>
 
-  <ul>
-    <li *ngFor="let task of userTasks; trackBy: trackTask">
-      <app-task [task]="task" (complete)="onCompleteTask($event)"></app-task>
-    </li>
-  </ul>
-</section>
+    <ul>
+      <li *ngFor="let task of userTasks; trackBy: trackTask">
+        <app-task [task]="task"></app-task>
+      </li>
+    </ul>
+  </section>
+</app-card>
